# inventory-management

./: .gitignore  Assignment-Requirement-Document.md  IMS_Architecture_Plan_v2.md  IMS_Architecture_Plan_v4_FINAL.md  IMS_Architecture_Plan_v5.md  README.md  admin-feature-enhancement_features.md
inventory-management-system/backend/: .coveragerc  Dockerfile  pyproject.toml
inventory-management-system/backend/alembic/: env.py
inventory-management-system/backend/alembic/versions/: 0001_initial_schema.py  0002_drop_deleted_at.py  0003_add_user_name.py  0004_user_invites.py  0005_backfill_user_display_names.py  0006_order_status_confirmed.py  0007_oauth_google_users.py  0008_expand_product_categories.py  0009_drop_category_check.py  0010_enable_rls_enforcement.py
inventory-management-system/backend/app/: config.py  database.py  main.py  seed.py
inventory-management-system/backend/app/auth/: dependencies.py  invite_repository.py  models.py  oauth_google.py  repository.py  router.py  schemas.py  service.py
inventory-management-system/backend/app/email/: __init__.py  resend_mailer.py
inventory-management-system/backend/app/inventory/: models.py  repository.py  router.py  schemas.py  service.py
inventory-management-system/backend/tests/: conftest.py  test_auth.py  test_auth_extended.py  test_auth_oauth.py  test_direct_repos.py  test_inventory.py  test_inventory_extended.py  test_orders.py  test_orders_extended.py  test_products.py  test_products_extended.py  test_repo_coverage.py  test_tenants.py  test_tenants_extended.py  test_users.py  test_users_extended.py
(+122 files in other folders)
