[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ims-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "email-validator>=2.0",
    "pydantic-settings>=2.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=3.2,<4.0",
    "python-jose[cryptography]>=3.3",
    "redis>=5.0",
    "structlog>=24.1",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "factory-boy>=3.3",
    "faker>=25.0",
    "aiosqlite>=0.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
